Prevent Header logo overflow

--- a/src/components/page/Header/Header.css
+++ b/src/components/page/Header/Header.css
@@ -1,6 +1,8 @@
 .navbar-brand img {
   max-height: 30px;
   position: relative;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .reveal-breadcrumb {
